# videoCapture

./: .gitignore  CMakeLists.txt  README.md  development_log.md  test_x11  test_x11.c
include/: camera_device.h  ffmpeg_recorder.h  file_manager.h  frame_extractor.h  gui.h  utils.h  video_capture.h  video_recorder.h
src/: camera_device.cpp  ffmpeg_recorder.cpp  file_manager.cpp  frame_extractor.cpp  frame_extractor_new.cpp  gui.cpp  main.cpp  utils.cpp  video_capture.cpp  video_recorder.cpp
